# Softwareentwicklung_Part_2

./: README.md
Homework/2.1/test/: test_student_struct.cpp
Vorlesung/Class/: CMakeLists.txt  Class.h  struct_to_class.cpp
Vorlesung/ErstesProgramm/: CMakeLists.txt  hello_world.cpp
Vorlesung/Inheritance/: CMakeLists.txt  inheritance.cpp
Vorlesung/Polymorphism/: CMakeLists.txt  Poly.cpp
Vorlesung/Structs/: CMakeLists.txt  structs.cpp
Vorlesung/Testtest/: CMakeLists.txt  Test.cpp
Vorlesung/tdd/: CMakeLists.txt
Vorlesung/tdd/test/: test_functions.cpp
